# game_engine

./: .gitignore  Cargo.toml  README.md  build.rs
design/: UI.md  devlog.md  interaction_modes.md
enum_array/: Cargo.toml
enum_array/src/: lib.rs
enum_array_derive/: Cargo.toml
enum_array_derive/src/: lib.rs
enum_array_trait/: Cargo.toml
enum_array_trait/src/: lib.rs
game_engine/: Cargo.toml  build.rs
game_engine/res/meshes/: block.mtl  sibeal.mtl
game_engine/src/: bbox.rs  block.rs  event.rs  game.rs  lib.rs  perlin_cdf.rs  player.rs  world_gen.rs
game_engine/src/camera/: basic_flight.rs  collision.rs  mod.rs  space_flight.rs  traits.rs  walking.rs
game_engine/src/data/: block.rs  item.rs  loader.rs  mod.rs  recipe.rs  world_gen.rs
game_engine/src/entity/: bundles.rs  component_manager.rs  components.rs  entity_manager.rs  mod.rs  systems.rs
game_engine/src/entity/systems/: mod.rs  ui.rs
game_engine/src/event/: messages.rs  mod.rs
game_engine/src/math/: bbox.rs  frustum.rs  mod.rs  ray.rs  rng.rs
game_engine/src/render/: camera.rs  context.rs  frustum.rs  light.rs  mod.rs  model.rs  state.rs  texture.rs
game_engine/src/render/shaders/: texture.rs  texture.wgsl  wireframe.wgsl
game_engine/src/state/: block.rs  game.rs  mod.rs  player.rs  world.rs
game_engine/src/state/blocks/: chest.rs  crafter.rs  mod.rs
game_engine/src/ui/: axes.rs  crafting.rs  debug.rs  helpers.rs  hotbar.rs  inventory.rs  mod.rs
game_engine/src/util/: counter.rs  stopwatch.rs
res/meshes/: block.mtl
src/: bbox.rs  block.rs  camera.rs  chunk.rs  game.rs  inventory.rs  item.rs  lib.rs  main.rs  model.rs  perlin_cdf.rs  player.rs  render.rs  shader.rs  texture.rs  world.rs  world_gen.rs
src/camera/: basic_flight.rs  mod.rs  space_flight.rs  traits.rs  walking.rs
src/data/: biome.rs  block.rs  loader.rs  mod.rs  world_gen.rs
src/render/: context.rs  frustum.rs  mod.rs  model.rs  ray.rs  renderable.rs  state.rs  texture.rs  ui.rs
src/render/shaders/: lighting.rs  mod.rs  texture.rs  wireframe.rs
src/shaders/: lighting.rs  lighting.wgsl  mod.rs  shader.wgsl  texture.rs
src/ui/: axes.rs  hotbar.rs  inventory.rs  mod.rs
src/util/: counter.rs  mod.rs  stopwatch.rs
