[package]
name = "game_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
glob = "0.3.2"
image = "0.25.6"
itertools = "0.14.0"
libnoise = { version = "1.2.0"}
num-derive = "0.4.2"
num-traits = "0.2.19"
tobj = "4.0.3"
tokio = { version = "1.45.1", features = ["full"] }
wgpu = "25.0.2"
wgpu_text = "0.9.3"
winit = { version = "0.30.11", features = ["rwh_06"] }

[build-dependencies]
fs_extra = "1.3.0"
anyhow = "1.0.98"
