[package]
name = "game_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"
eframe = "0.32"
egui = "0.32"
egui-wgpu = { version = "0.32", features = ["winit"] }
egui-winit = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders", "image"] }
enum-map = "2.7.3"
env_logger = "0.11.8"
glob = "0.3.2"
image = "0.25.6"
itertools = "0.14.0"
libnoise = { version = "1.2.0"}
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.9.1"
rustc-hash = "2.1.1"
sycamore-reactive = "0.9.1"
tobj = "4.0.3"
tokio = { version = "1.45.1", features = ["full"] }
wgpu = "25"
winit = { version = "0.30.11", features = ["rwh_06", "wayland", "x11"], default-features = false }

enum_array = {path = "../enum_array"}
egui_taffy = "0.8.0"
typed-builder = "0.21.0"
impl_ops = "0.1.1"
log = "0.4.27"
hecs = "0.10.5"

[build-dependencies]
fs_extra = "1.3.0"
anyhow = "1.0.98"

